# Zoomy-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  collisionTest.c  compile.bat  compileCollisionTest.bat  gamestate.h  main.c  raytriangleintersection.c  raytriangleintersection.h  vector.h
a big jump/: controls.cfg
a big jump/cdf/: plat_player.cdf
a big jump/scripts/: camera.lua
include/: angelscript_c.h  d_args.h  d_dict _s.h  d_dict.h  d_dict_s.h  d_list.h  d_queue.h  d_string.h  f_cdfparser.h  f_objparser.h  g_attributes.h  g_events.h  g_health.h  g_physics.h  g_statemachines.h  gamestate.h  hash.h  m_fixed.c  m_fixed.h  m_matrix.h  m_physics.h  m_random.h  m_raytriangleintersection.h  m_vector.h  m_vector2.h  m_vector3.h  m_vector4.h  raytriangleintersection.h  safe_memory.h  strtok_r.h  vector3.h  xoshiro256plusplus.h
include/SDL3/: SDL_revision.h
resources/cdf/: plat_player.cdf  root.cdf
src/: CMakeLists.txt  Makefile  charArgsTest.c  collisionTest.c  compile charArrayArgsTest.bat  compile hashgenerator.bat  compile t_SDL3.bat  compile t_cdfparser.bat  compile t_dict.bat  compile t_events.bat  compile t_fluidsynth.bat  compile t_lua.bat  compile t_queue.bat  compile.bat  compileCollisionTest.bat  compile_commands.json  d_dict.c  d_dict_s.c  d_list.c  d_queue.c  d_string.c  f_cdfparser.c  f_objparser.c  fxpt_atan2.c  g_events.c  g_statemachines.c  hash.c  hashGenerator.c  input.c  m_cylinder.c  m_fixed.c  m_random.c  m_raytriangleintersection.c  m_vector.c  m_vector2.c  m_vector3.c  m_vector4.c  main.c  raytriangleintersection.c  safe_memory.c  (+13 more)
src/.cache/clangd/index/: d_dict.c.2C193FF8B86E1A3E.idx  d_dict_s.c.A017670EBE0E23B1.idx  d_queue.c.028ADEA0AB51C17A.idx  d_string.c.AEFE7F94498B634A.idx  f_cdfparser.c.D1B8A72151413348.idx  f_objparser.c.181748FAFC6F1300.idx  g_events.c.B22F70FB2EF67614.idx  g_statemachines.c.598C8E8906D4614C.idx  hash.c.25E9AB15C527CD74.idx  hashGenerator.c.422B21F7044367AB.idx  m_cylinder.c.A8E18993DD18070C.idx  m_raytriangleintersection.c.502FEF61A7A8D1DE.idx  m_vector.c.1D790A8870B509A2.idx  main.c.DED250BC63B5F25A.idx  t_cdfparser.c.CD830CD271FBA595.idx  t_charArgs.c.C2096F927B448C3B.idx  t_collision.c.B6FCA10111ED9C3B.idx  t_dict.c.56353257B993ED06.idx  t_fluidsynth.c.B574D448249C87D9.idx  t_lua.c.767747BCF0287D24.idx  t_queue.c.E0091514BECFA248.idx
src/cdf/: root.cdf
